--- a/cadastro.html
+++ b/cadastro.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Página Cadastro</title>
+    <style>
+        .required-field{
+            border: 2px solid red;
+        }
+    </style>
 </head>
 <body>
     <!--Formulário de inserção de produto-->
     <form action="#" id="formulario">
 
-        <h1>Insira as informações do produto:</h1>
+        <!-- abaixo link para a página de lista -->
+        <a href="lista.html">Ir para Lista de produtos</a>
+
+        <h1>Página de Cadastro de itens</h1>
+        <h3>Insira as informações de cadastro:</h3>
 
         <label for="cod-produto">Código:</label>
         <input id="cod-produto" type="text" readonly>
